--- a/src/main/java/unittest.properties
+++ b/src/main/java/unittest.properties
@@ -1,3 +1,3 @@
-___baseuri=http://localhost/rest
-baseuri=http://localhost/rest
-_baseuri=http://localhost:53655/
+___baseuri=http://ec2-54-88-67-209.compute-1.amazonaws.com/
+baseuri=http://ec2-54-88-67-209.compute-1.amazonaws.com/
+_baseuri=http://ec2-54-88-67-209.compute-1.amazonaws.com/
