--- a/pom.xml
+++ b/pom.xml
@@ -1,48 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>Samples</groupId>
-  <artifactId>RunReport</artifactId>
-  <version>21.0.0.1</version>
-  <repositories>
-    <repository>
-      <id>windward-libs</id>
-      <name>windward-libs</name>
-      <url>https://windward.mycloudrepo.io/public/repositories/windward-libs</url>
-    </repository>
-  </repositories>
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  <dependencies>
-    <dependency>
-      <groupId>net.windward</groupId>
-      <artifactId>WindwardRESTJava8Client</artifactId>
-      <version>21.0.0.1</version>
-    </dependency>
-      <dependency>
-          <groupId>Samples</groupId>
-          <artifactId>RunReport</artifactId>
-          <version>2.0.0.0</version>
-      </dependency>
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>1.4</version>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.12</version>
-    </dependency>
-  </dependencies>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>Samples</groupId>
+    <artifactId>Sample</artifactId>
+    <version>22.1.0.0</version>
+    <packaging>jar</packaging>
+    <repositories>
+        <repository>
+            <id>windward-libs</id>
+            <name>windward-libs</name>
+            <url>https://windward.mycloudrepo.io/public/repositories/windward-libs</url>
+        </repository>
+    </repositories>
+    <build>
+        <finalName>WindwardSample</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>windward.sample.Sample</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>net.windward</groupId>
+            <artifactId>WindwardRESTJava8Client</artifactId>
+            <version>21.5.0.3</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.12</version>
+        </dependency>
+    </dependencies>
 </project>
